<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/baby_carriage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hiclipart" />

    <View
        android:id="@+id/view"
        android:layout_width="93dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:background="@color/back_username_color"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/user_surname"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="68dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        android:background="@color/edit_my_profile"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="148dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/find_nannies_button"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="348dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="161dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/manage_appointments_button"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        tools:layout_editor_absoluteY="348dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/glass_antiqua"
        android:text="@string/appointments_history_button"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>